# EyeTracking

prototype1/: README.md  pyproject.toml
prototype1/configs/: default.yaml  generate_charuco.py
prototype1/data/camera/: cam0.yaml
prototype1/eyetracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
prototype1/eyetracker/app/: calibrate.py  cam_calibrate.py
prototype1/eyetracker/features/: feature_builder.py
prototype1/eyetracker/geometry/: geometry.py  screen_plane.py
prototype1/eyetracker/io/: logger.py  schemas.py
prototype1/eyetracker/quality/: gates.py
prototype1/eyetracker/ui/: draw.py  grid.py
prototype1/eyetracker/video/: camera_model.py  capture.py  realsense_capture.py  writer.py
prototype1/eyetracker/vision/: camera_utils.py  headpose.py  mediapipe_iris.py  rs3d.py  spiga_adapter.py  webcam2d.py
prototype1/tests/: realsense_test.py
